{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 2161,
  "lineage": "163357b0-ab2b-3496-5578-4794956ec2ad",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:security-group/sg-01290dfb61ac469cc",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-01290dfb61ac469cc",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.aws_managed_prometheus[0]",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "prometheus",
            "metadata": [
              {
                "generation": 0,
                "name": "prometheus",
                "resource_version": "1330",
                "uid": "af9831d4-a150-4cb7-8d70-7ee4a0bef2f9"
              }
            ]
          },
          "dependencies": [
            "aws_kms_key.eks",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.aws_security_group_rule.cluster_private_access_cidrs_source",
            "module.eks.aws_security_group_rule.cluster_private_access_sg_source",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.eks.data.http.wait_for_cluster",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:security-group/sg-0f0ede326b3dc82d0",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0f0ede326b3dc82d0",
            "ingress": [],
            "name": "tarya-preprod-dev-eks2021082504211704110000000e",
            "name_prefix": "tarya-preprod-dev-eks",
            "owner_id": "218645542363",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tarya-preprod-dev-eks-eks_cluster_sg",
              "created-by": "Terraform v1.0.1",
              "environment": "preprod",
              "name": "tarya-preprod-dev-eks",
              "resource": "eks",
              "tenant": "tarya",
              "zone": "dev"
            },
            "tags_all": {
              "Name": "tarya-preprod-dev-eks-eks_cluster_sg",
              "created-by": "Terraform v1.0.1",
              "environment": "preprod",
              "name": "tarya-preprod-dev-eks",
              "resource": "eks",
              "tenant": "tarya",
              "zone": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:security-group/sg-01a1841f60c7f9a53",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-01a1841f60c7f9a53",
            "ingress": [],
            "name": "tarya-preprod-dev-eks2021082504211794810000000f",
            "name_prefix": "tarya-preprod-dev-eks",
            "owner_id": "218645542363",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tarya-preprod-dev-eks-eks_worker_sg",
              "created-by": "Terraform v1.0.1",
              "environment": "preprod",
              "kubernetes.io/cluster/tarya-preprod-dev-eks": "owned",
              "name": "tarya-preprod-dev-eks",
              "resource": "eks",
              "tenant": "tarya",
              "zone": "dev"
            },
            "tags_all": {
              "Name": "tarya-preprod-dev-eks-eks_worker_sg",
              "created-by": "Terraform v1.0.1",
              "environment": "preprod",
              "kubernetes.io/cluster/tarya-preprod-dev-eks": "owned",
              "name": "tarya-preprod-dev-eks",
              "resource": "eks",
              "tenant": "tarya",
              "zone": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-1481798355",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f0ede326b3dc82d0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-1562463252",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f0ede326b3dc82d0",
            "self": false,
            "source_security_group_id": "sg-01a1841f60c7f9a53",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-4214280371",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01a1841f60c7f9a53",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3097212703",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01a1841f60c7f9a53",
            "self": false,
            "source_security_group_id": "sg-0f0ede326b3dc82d0",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2917970171",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01a1841f60c7f9a53",
            "self": false,
            "source_security_group_id": "sg-0f0ede326b3dc82d0",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2704386799",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01a1841f60c7f9a53",
            "self": false,
            "source_security_group_id": "sg-01a1841f60c7f9a53",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.endpoints_interface",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:vpc-endpoint/vpce-0f7c9dbb55a35752a",
            "cidr_blocks": [
              "52.219.44.0/22",
              "3.5.136.0/22",
              "52.219.140.0/24",
              "52.219.72.0/22",
              "3.5.134.0/23",
              "52.219.168.0/22"
            ],
            "id": "vpce-0f7c9dbb55a35752a",
            "owner_id": "218645542363",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ea54007",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-07b57f6b5c1eee9e8"
            ],
            "service_name": "com.amazonaws.eu-central-1.s3",
            "state": "available",
            "tags": {
              "Name": "s3-vpc-Gateway"
            },
            "tags_all": {
              "Name": "s3-vpc-Gateway"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.endpoints_interface.data.aws_vpc_endpoint_service.this",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.helm.module.aws-for-fluent-bit[0]",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "logging",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "logging",
            "metadata": [
              {
                "generation": 0,
                "name": "logging",
                "resource_version": "1748",
                "uid": "44adfa40-6aa5-4bef-87d0-267ed9dd2a91"
              }
            ]
          },
          "dependencies": [
            "aws_kms_key.eks",
            "data.aws_ami.amazonlinux2eks",
            "data.aws_ami.windows2019core",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_autoscaling_group.workers",
            "module.eks.aws_autoscaling_group.workers_launch_template",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_instance_profile.workers",
            "module.eks.aws_iam_instance_profile.workers_launch_template",
            "module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks.aws_iam_policy.cluster_elb_sl_role_creation",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role.workers",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_elb_sl_role_creation",
            "module.eks.aws_iam_role_policy_attachment.workers_AmazonEC2ContainerRegistryReadOnly",
            "module.eks.aws_iam_role_policy_attachment.workers_AmazonEKSWorkerNodePolicy",
            "module.eks.aws_iam_role_policy_attachment.workers_AmazonEKS_CNI_Policy",
            "module.eks.aws_iam_role_policy_attachment.workers_additional_policies",
            "module.eks.aws_launch_configuration.workers",
            "module.eks.aws_launch_template.workers_launch_template",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.aws_security_group_rule.cluster_primary_ingress_workers",
            "module.eks.aws_security_group_rule.cluster_private_access_cidrs_source",
            "module.eks.aws_security_group_rule.cluster_private_access_sg_source",
            "module.eks.aws_security_group_rule.workers_egress_internet",
            "module.eks.aws_security_group_rule.workers_ingress_cluster",
            "module.eks.aws_security_group_rule.workers_ingress_cluster_https",
            "module.eks.aws_security_group_rule.workers_ingress_cluster_kubelet",
            "module.eks.aws_security_group_rule.workers_ingress_cluster_primary",
            "module.eks.aws_security_group_rule.workers_ingress_self",
            "module.eks.data.aws_ami.eks_worker",
            "module.eks.data.aws_ami.eks_worker_windows",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_instance_profile.custom_worker_group_iam_instance_profile",
            "module.eks.data.aws_iam_instance_profile.custom_worker_group_launch_template_iam_instance_profile",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cluster_elb_sl_role_creation",
            "module.eks.data.aws_iam_policy_document.workers_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.eks.data.http.wait_for_cluster",
            "module.eks.kubernetes_config_map.aws_auth",
            "module.eks.local_file.kubeconfig",
            "module.eks.module.fargate.aws_eks_fargate_profile.this",
            "module.eks.module.fargate.aws_iam_role.eks_fargate_pod",
            "module.eks.module.fargate.aws_iam_role_policy_attachment.eks_fargate_pod",
            "module.eks.module.fargate.data.aws_iam_policy_document.eks_fargate_pod_assume_role",
            "module.eks.module.fargate.data.aws_iam_role.custom_fargate_iam_role",
            "module.eks.module.node_groups.aws_eks_node_group.workers",
            "module.eks.module.node_groups.aws_launch_template.workers",
            "module.eks.module.node_groups.data.cloudinit_config.workers_userdata",
            "module.iam.aws_iam_role.cluster_admin_access",
            "module.iam.aws_iam_role.cluster_devs_access",
            "module.iam.data.aws_iam_policy_document.rbac-assume-role-policy",
            "module.iam.data.aws_iam_policy_document.rbac-assume-role-policy-devs",
            "module.launch-templates-on-demand.aws_launch_template.default",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.windows_support_iam.aws_iam_instance_profile.windows",
            "module.windows_support_iam.aws_iam_role.linux"
          ]
        }
      ]
    },
    {
      "module": "module.helm.module.fargate_fluentbit[0]",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "aws_observability",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aws-observability",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "aws-observability": "enabled"
                },
                "name": "aws-observability",
                "resource_version": "1747",
                "uid": "90e2fa5e-f704-48f7-8991-752789c97434"
              }
            ]
          },
          "dependencies": [
            "aws_kms_key.eks",
            "data.aws_ami.amazonlinux2eks",
            "data.aws_ami.windows2019core",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_autoscaling_group.workers",
            "module.eks.aws_autoscaling_group.workers_launch_template",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_instance_profile.workers",
            "module.eks.aws_iam_instance_profile.workers_launch_template",
            "module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks.aws_iam_policy.cluster_elb_sl_role_creation",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role.workers",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_elb_sl_role_creation",
            "module.eks.aws_iam_role_policy_attachment.workers_AmazonEC2ContainerRegistryReadOnly",
            "module.eks.aws_iam_role_policy_attachment.workers_AmazonEKSWorkerNodePolicy",
            "module.eks.aws_iam_role_policy_attachment.workers_AmazonEKS_CNI_Policy",
            "module.eks.aws_iam_role_policy_attachment.workers_additional_policies",
            "module.eks.aws_launch_configuration.workers",
            "module.eks.aws_launch_template.workers_launch_template",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.aws_security_group_rule.cluster_primary_ingress_workers",
            "module.eks.aws_security_group_rule.cluster_private_access_cidrs_source",
            "module.eks.aws_security_group_rule.cluster_private_access_sg_source",
            "module.eks.aws_security_group_rule.workers_egress_internet",
            "module.eks.aws_security_group_rule.workers_ingress_cluster",
            "module.eks.aws_security_group_rule.workers_ingress_cluster_https",
            "module.eks.aws_security_group_rule.workers_ingress_cluster_kubelet",
            "module.eks.aws_security_group_rule.workers_ingress_cluster_primary",
            "module.eks.aws_security_group_rule.workers_ingress_self",
            "module.eks.data.aws_ami.eks_worker",
            "module.eks.data.aws_ami.eks_worker_windows",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_instance_profile.custom_worker_group_iam_instance_profile",
            "module.eks.data.aws_iam_instance_profile.custom_worker_group_launch_template_iam_instance_profile",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cluster_elb_sl_role_creation",
            "module.eks.data.aws_iam_policy_document.workers_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.eks.data.http.wait_for_cluster",
            "module.eks.kubernetes_config_map.aws_auth",
            "module.eks.local_file.kubeconfig",
            "module.eks.module.fargate.aws_eks_fargate_profile.this",
            "module.eks.module.fargate.aws_iam_role.eks_fargate_pod",
            "module.eks.module.fargate.aws_iam_role_policy_attachment.eks_fargate_pod",
            "module.eks.module.fargate.data.aws_iam_policy_document.eks_fargate_pod_assume_role",
            "module.eks.module.fargate.data.aws_iam_role.custom_fargate_iam_role",
            "module.eks.module.node_groups.aws_eks_node_group.workers",
            "module.eks.module.node_groups.aws_launch_template.workers",
            "module.eks.module.node_groups.data.cloudinit_config.workers_userdata",
            "module.iam.aws_iam_role.cluster_admin_access",
            "module.iam.aws_iam_role.cluster_devs_access",
            "module.iam.data.aws_iam_policy_document.rbac-assume-role-policy",
            "module.iam.data.aws_iam_policy_document.rbac-assume-role-policy-devs",
            "module.launch-templates-on-demand.aws_launch_template.default",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.windows_support_iam.aws_iam_instance_profile.windows",
            "module.windows_support_iam.aws_iam_role.linux"
          ]
        }
      ]
    },
    {
      "module": "module.helm.module.opentelemetry_collector[0]",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "opentelemetry_system",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "opentelemetry-system",
            "metadata": [
              {
                "generation": 0,
                "name": "opentelemetry-system",
                "resource_version": "1746",
                "uid": "3bd3aa84-d89d-45e3-b386-22cf93321d5b"
              }
            ]
          },
          "dependencies": [
            "aws_kms_key.eks",
            "data.aws_ami.amazonlinux2eks",
            "data.aws_ami.windows2019core",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_autoscaling_group.workers",
            "module.eks.aws_autoscaling_group.workers_launch_template",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_instance_profile.workers",
            "module.eks.aws_iam_instance_profile.workers_launch_template",
            "module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks.aws_iam_policy.cluster_elb_sl_role_creation",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role.workers",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_elb_sl_role_creation",
            "module.eks.aws_iam_role_policy_attachment.workers_AmazonEC2ContainerRegistryReadOnly",
            "module.eks.aws_iam_role_policy_attachment.workers_AmazonEKSWorkerNodePolicy",
            "module.eks.aws_iam_role_policy_attachment.workers_AmazonEKS_CNI_Policy",
            "module.eks.aws_iam_role_policy_attachment.workers_additional_policies",
            "module.eks.aws_launch_configuration.workers",
            "module.eks.aws_launch_template.workers_launch_template",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.aws_security_group_rule.cluster_primary_ingress_workers",
            "module.eks.aws_security_group_rule.cluster_private_access_cidrs_source",
            "module.eks.aws_security_group_rule.cluster_private_access_sg_source",
            "module.eks.aws_security_group_rule.workers_egress_internet",
            "module.eks.aws_security_group_rule.workers_ingress_cluster",
            "module.eks.aws_security_group_rule.workers_ingress_cluster_https",
            "module.eks.aws_security_group_rule.workers_ingress_cluster_kubelet",
            "module.eks.aws_security_group_rule.workers_ingress_cluster_primary",
            "module.eks.aws_security_group_rule.workers_ingress_self",
            "module.eks.data.aws_ami.eks_worker",
            "module.eks.data.aws_ami.eks_worker_windows",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_instance_profile.custom_worker_group_iam_instance_profile",
            "module.eks.data.aws_iam_instance_profile.custom_worker_group_launch_template_iam_instance_profile",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cluster_elb_sl_role_creation",
            "module.eks.data.aws_iam_policy_document.workers_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.eks.data.http.wait_for_cluster",
            "module.eks.kubernetes_config_map.aws_auth",
            "module.eks.local_file.kubeconfig",
            "module.eks.module.fargate.aws_eks_fargate_profile.this",
            "module.eks.module.fargate.aws_iam_role.eks_fargate_pod",
            "module.eks.module.fargate.aws_iam_role_policy_attachment.eks_fargate_pod",
            "module.eks.module.fargate.data.aws_iam_policy_document.eks_fargate_pod_assume_role",
            "module.eks.module.fargate.data.aws_iam_role.custom_fargate_iam_role",
            "module.eks.module.node_groups.aws_eks_node_group.workers",
            "module.eks.module.node_groups.aws_launch_template.workers",
            "module.eks.module.node_groups.data.cloudinit_config.workers_userdata",
            "module.iam.aws_iam_role.cluster_admin_access",
            "module.iam.aws_iam_role.cluster_devs_access",
            "module.iam.data.aws_iam_policy_document.rbac-assume-role-policy",
            "module.iam.data.aws_iam_policy_document.rbac-assume-role-policy-devs",
            "module.launch-templates-on-demand.aws_launch_template.default",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.windows_support_iam.aws_iam_instance_profile.windows",
            "module.windows_support_iam.aws_iam_role.linux"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:security-group/sg-01290dfb61ac469cc",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01290dfb61ac469cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/18"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "218645542363",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tarya-preprod-dev-vpc-endpoint-secgrp",
              "created-by": "Terraform v1.0.1"
            },
            "tags_all": {
              "Name": "tarya-preprod-dev-vpc-endpoint-secgrp",
              "created-by": "Terraform v1.0.1"
            },
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-6a08085e",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-69-227-167.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.69.227.167",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tarya-preprod-dev-vpc-eu-central-1a",
              "created-by": "Terraform v1.0.1"
            },
            "tags_all": {
              "Name": "tarya-preprod-dev-vpc-eu-central-1a",
              "created-by": "Terraform v1.0.1"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:internet-gateway/igw-09253a6ceb24d55cc",
            "id": "igw-09253a6ceb24d55cc",
            "owner_id": "218645542363",
            "tags": {
              "Name": "tarya-preprod-dev-vpc",
              "created-by": "Terraform v1.0.1"
            },
            "tags_all": {
              "Name": "tarya-preprod-dev-vpc",
              "created-by": "Terraform v1.0.1"
            },
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-6a08085e",
            "connectivity_type": "public",
            "id": "nat-092a65f07f42082db",
            "network_interface_id": "eni-07a619163d823dc7a",
            "private_ip": "10.1.14.217",
            "public_ip": "3.69.227.167",
            "subnet_id": "subnet-094fbe69aa27e8b26",
            "tags": {
              "Name": "tarya-preprod-dev-vpc-eu-central-1a",
              "created-by": "Terraform v1.0.1"
            },
            "tags_all": {
              "Name": "tarya-preprod-dev-vpc-eu-central-1a",
              "created-by": "Terraform v1.0.1"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07b57f6b5c1eee9e81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-092a65f07f42082db",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07b57f6b5c1eee9e8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09253a6ceb24d55cc",
            "id": "r-rtb-05944f44ef5c9bfc11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05944f44ef5c9bfc1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:route-table/rtb-07b57f6b5c1eee9e8",
            "id": "rtb-07b57f6b5c1eee9e8",
            "owner_id": "218645542363",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tarya-preprod-dev-vpc-private",
              "created-by": "Terraform v1.0.1"
            },
            "tags_all": {
              "Name": "tarya-preprod-dev-vpc-private",
              "created-by": "Terraform v1.0.1"
            },
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:route-table/rtb-05944f44ef5c9bfc1",
            "id": "rtb-05944f44ef5c9bfc1",
            "owner_id": "218645542363",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tarya-preprod-dev-vpc-public",
              "created-by": "Terraform v1.0.1"
            },
            "tags_all": {
              "Name": "tarya-preprod-dev-vpc-public",
              "created-by": "Terraform v1.0.1"
            },
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2dbd144856a7a53",
            "route_table_id": "rtb-07b57f6b5c1eee9e8",
            "subnet_id": "subnet-033d339851acdc9f1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07aa19a5d4292489c",
            "route_table_id": "rtb-07b57f6b5c1eee9e8",
            "subnet_id": "subnet-00515862c87909ccb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0edcae62c514c10",
            "route_table_id": "rtb-07b57f6b5c1eee9e8",
            "subnet_id": "subnet-019121122fb6fa9db"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038586f112743da24",
            "route_table_id": "rtb-05944f44ef5c9bfc1",
            "subnet_id": "subnet-094fbe69aa27e8b26"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010a7dc25db1ac6d6",
            "route_table_id": "rtb-05944f44ef5c9bfc1",
            "subnet_id": "subnet-0693d9167a3ad9983"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06372d21bc0ba6f6b",
            "route_table_id": "rtb-05944f44ef5c9bfc1",
            "subnet_id": "subnet-08a3c9be100baacda"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:subnet/subnet-033d339851acdc9f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.1.0.0/22",
            "id": "subnet-033d339851acdc9f1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218645542363",
            "tags": {
              "Name": "tarya-preprod-dev-vpc-private-eu-central-1a",
              "created-by": "Terraform v1.0.1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "tarya-preprod-dev-vpc-private-eu-central-1a",
              "created-by": "Terraform v1.0.1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:subnet/subnet-00515862c87909ccb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.1.4.0/22",
            "id": "subnet-00515862c87909ccb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218645542363",
            "tags": {
              "Name": "tarya-preprod-dev-vpc-private-eu-central-1b",
              "created-by": "Terraform v1.0.1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "tarya-preprod-dev-vpc-private-eu-central-1b",
              "created-by": "Terraform v1.0.1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:subnet/subnet-019121122fb6fa9db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.1.8.0/22",
            "id": "subnet-019121122fb6fa9db",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218645542363",
            "tags": {
              "Name": "tarya-preprod-dev-vpc-private-eu-central-1c",
              "created-by": "Terraform v1.0.1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "tarya-preprod-dev-vpc-private-eu-central-1c",
              "created-by": "Terraform v1.0.1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:subnet/subnet-094fbe69aa27e8b26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.1.12.0/22",
            "id": "subnet-094fbe69aa27e8b26",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218645542363",
            "tags": {
              "Name": "tarya-preprod-dev-vpc-public-eu-central-1a",
              "created-by": "Terraform v1.0.1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "tarya-preprod-dev-vpc-public-eu-central-1a",
              "created-by": "Terraform v1.0.1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:subnet/subnet-0693d9167a3ad9983",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.1.16.0/22",
            "id": "subnet-0693d9167a3ad9983",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218645542363",
            "tags": {
              "Name": "tarya-preprod-dev-vpc-public-eu-central-1b",
              "created-by": "Terraform v1.0.1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "tarya-preprod-dev-vpc-public-eu-central-1b",
              "created-by": "Terraform v1.0.1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:subnet/subnet-08a3c9be100baacda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.1.20.0/22",
            "id": "subnet-08a3c9be100baacda",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218645542363",
            "tags": {
              "Name": "tarya-preprod-dev-vpc-public-eu-central-1c",
              "created-by": "Terraform v1.0.1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "tarya-preprod-dev-vpc-public-eu-central-1c",
              "created-by": "Terraform v1.0.1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:vpc/vpc-034c92cd703eec780",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/18",
            "default_network_acl_id": "acl-044e292e3a2d7fd4c",
            "default_route_table_id": "rtb-07e2e1f23573cbe9d",
            "default_security_group_id": "sg-01290dfb61ac469cc",
            "dhcp_options_id": "dopt-52e16438",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-034c92cd703eec780",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07e2e1f23573cbe9d",
            "owner_id": "218645542363",
            "tags": {
              "Name": "tarya-preprod-dev-vpc",
              "created-by": "Terraform v1.0.1"
            },
            "tags_all": {
              "Name": "tarya-preprod-dev-vpc",
              "created-by": "Terraform v1.0.1"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_endpoints_gateway",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "aps-workspaces",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:vpc-endpoint/vpce-0b793cb380e03ab98",
            "dns_entry": [
              {
                "dns_name": "vpce-0b793cb380e03ab98-4wuemnjb.vpce-svc-0af6d56a3675e049f.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0b793cb380e03ab98-4wuemnjb-eu-central-1b.vpce-svc-0af6d56a3675e049f.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0b793cb380e03ab98-4wuemnjb-eu-central-1a.vpce-svc-0af6d56a3675e049f.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0b793cb380e03ab98-4wuemnjb-eu-central-1c.vpce-svc-0af6d56a3675e049f.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "aps-workspaces.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z0984238244GLAJLONABL"
              }
            ],
            "id": "vpce-0b793cb380e03ab98",
            "network_interface_ids": [
              "eni-014a7b71ee2580f60",
              "eni-01889b67aca243782",
              "eni-0b231ddaea541b058"
            ],
            "owner_id": "218645542363",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01290dfb61ac469cc"
            ],
            "service_name": "com.amazonaws.eu-central-1.aps-workspaces",
            "state": "available",
            "subnet_ids": [
              "subnet-00515862c87909ccb",
              "subnet-019121122fb6fa9db",
              "subnet-033d339851acdc9f1"
            ],
            "tags": {
              "Endpoint": "true",
              "Project": "EKS",
              "created-by": "Terraform v1.0.1"
            },
            "tags_all": {
              "Endpoint": "true",
              "Project": "EKS",
              "created-by": "Terraform v1.0.1"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_security_group.default",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints_gateway.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "autoscaling",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:vpc-endpoint/vpce-0397d0ce77b7967a9",
            "dns_entry": [
              {
                "dns_name": "vpce-0397d0ce77b7967a9-jht75vr5.autoscaling.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0397d0ce77b7967a9-jht75vr5-eu-central-1b.autoscaling.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0397d0ce77b7967a9-jht75vr5-eu-central-1a.autoscaling.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0397d0ce77b7967a9-jht75vr5-eu-central-1c.autoscaling.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "autoscaling.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z0984313CDLM4WVIX13T"
              }
            ],
            "id": "vpce-0397d0ce77b7967a9",
            "network_interface_ids": [
              "eni-08fdb4172282057aa",
              "eni-0e3aec1488cf816df",
              "eni-0e9f3bfa9a78a8f6c"
            ],
            "owner_id": "218645542363",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01290dfb61ac469cc"
            ],
            "service_name": "com.amazonaws.eu-central-1.autoscaling",
            "state": "available",
            "subnet_ids": [
              "subnet-00515862c87909ccb",
              "subnet-019121122fb6fa9db",
              "subnet-033d339851acdc9f1"
            ],
            "tags": {
              "Endpoint": "true",
              "Project": "EKS",
              "created-by": "Terraform v1.0.1"
            },
            "tags_all": {
              "Endpoint": "true",
              "Project": "EKS",
              "created-by": "Terraform v1.0.1"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_security_group.default",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints_gateway.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ec2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:vpc-endpoint/vpce-0e8e5e4e7b909ccac",
            "dns_entry": [
              {
                "dns_name": "vpce-0e8e5e4e7b909ccac-i837g5nt.ec2.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0e8e5e4e7b909ccac-i837g5nt-eu-central-1a.ec2.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0e8e5e4e7b909ccac-i837g5nt-eu-central-1c.ec2.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0e8e5e4e7b909ccac-i837g5nt-eu-central-1b.ec2.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ec2.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z0195407LADCSSPG34C0"
              }
            ],
            "id": "vpce-0e8e5e4e7b909ccac",
            "network_interface_ids": [
              "eni-00eb0f8d475eb49fb",
              "eni-037c001ab2cfd8486",
              "eni-043c7af747c45746d"
            ],
            "owner_id": "218645542363",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01290dfb61ac469cc"
            ],
            "service_name": "com.amazonaws.eu-central-1.ec2",
            "state": "available",
            "subnet_ids": [
              "subnet-00515862c87909ccb",
              "subnet-019121122fb6fa9db",
              "subnet-033d339851acdc9f1"
            ],
            "tags": {
              "Endpoint": "true",
              "Project": "EKS",
              "created-by": "Terraform v1.0.1"
            },
            "tags_all": {
              "Endpoint": "true",
              "Project": "EKS",
              "created-by": "Terraform v1.0.1"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_security_group.default",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints_gateway.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ec2messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:vpc-endpoint/vpce-0a6f4053bddf6ed86",
            "dns_entry": [
              {
                "dns_name": "vpce-0a6f4053bddf6ed86-sqb7ntz1.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0a6f4053bddf6ed86-sqb7ntz1-eu-central-1c.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0a6f4053bddf6ed86-sqb7ntz1-eu-central-1b.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0a6f4053bddf6ed86-sqb7ntz1-eu-central-1a.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ec2messages.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z09843162S8T6NPBAE3UJ"
              }
            ],
            "id": "vpce-0a6f4053bddf6ed86",
            "network_interface_ids": [
              "eni-020412c29cd84953f",
              "eni-06db923efeb5d319a",
              "eni-0de18fae94a0089bd"
            ],
            "owner_id": "218645542363",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01290dfb61ac469cc"
            ],
            "service_name": "com.amazonaws.eu-central-1.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-00515862c87909ccb",
              "subnet-019121122fb6fa9db",
              "subnet-033d339851acdc9f1"
            ],
            "tags": {
              "Endpoint": "true",
              "Project": "EKS",
              "created-by": "Terraform v1.0.1"
            },
            "tags_all": {
              "Endpoint": "true",
              "Project": "EKS",
              "created-by": "Terraform v1.0.1"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_security_group.default",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints_gateway.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ecr_api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:vpc-endpoint/vpce-0d13acd7afd9e522e",
            "dns_entry": [
              {
                "dns_name": "vpce-0d13acd7afd9e522e-vxcn001y.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0d13acd7afd9e522e-vxcn001y-eu-central-1c.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0d13acd7afd9e522e-vxcn001y-eu-central-1b.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0d13acd7afd9e522e-vxcn001y-eu-central-1a.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "api.ecr.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z01953971W39882WBGFNF"
              }
            ],
            "id": "vpce-0d13acd7afd9e522e",
            "network_interface_ids": [
              "eni-08c15bf795744f901",
              "eni-0a26b142e19ddd4d0",
              "eni-0a39f11cf7a58a7f0"
            ],
            "owner_id": "218645542363",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01290dfb61ac469cc"
            ],
            "service_name": "com.amazonaws.eu-central-1.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-00515862c87909ccb",
              "subnet-019121122fb6fa9db",
              "subnet-033d339851acdc9f1"
            ],
            "tags": {
              "Endpoint": "true",
              "Project": "EKS",
              "created-by": "Terraform v1.0.1"
            },
            "tags_all": {
              "Endpoint": "true",
              "Project": "EKS",
              "created-by": "Terraform v1.0.1"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_security_group.default",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints_gateway.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ecr_dkr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:vpc-endpoint/vpce-0221af757ddd2fd87",
            "dns_entry": [
              {
                "dns_name": "vpce-0221af757ddd2fd87-dm74gpnt.dkr.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0221af757ddd2fd87-dm74gpnt-eu-central-1c.dkr.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0221af757ddd2fd87-dm74gpnt-eu-central-1a.dkr.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0221af757ddd2fd87-dm74gpnt-eu-central-1b.dkr.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "dkr.ecr.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z01954063J7QK2SY95IKZ"
              },
              {
                "dns_name": "*.dkr.ecr.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z01954063J7QK2SY95IKZ"
              }
            ],
            "id": "vpce-0221af757ddd2fd87",
            "network_interface_ids": [
              "eni-02eb37accceb572be",
              "eni-098f39017b99bf37f",
              "eni-0ac944eac0278d95e"
            ],
            "owner_id": "218645542363",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01290dfb61ac469cc"
            ],
            "service_name": "com.amazonaws.eu-central-1.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-00515862c87909ccb",
              "subnet-019121122fb6fa9db",
              "subnet-033d339851acdc9f1"
            ],
            "tags": {
              "Endpoint": "true",
              "Project": "EKS",
              "created-by": "Terraform v1.0.1"
            },
            "tags_all": {
              "Endpoint": "true",
              "Project": "EKS",
              "created-by": "Terraform v1.0.1"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_security_group.default",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints_gateway.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "elasticloadbalancing",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:vpc-endpoint/vpce-01a03572a1d56b3b1",
            "dns_entry": [
              {
                "dns_name": "vpce-01a03572a1d56b3b1-f10kgvyw.elasticloadbalancing.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-01a03572a1d56b3b1-f10kgvyw-eu-central-1b.elasticloadbalancing.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-01a03572a1d56b3b1-f10kgvyw-eu-central-1c.elasticloadbalancing.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-01a03572a1d56b3b1-f10kgvyw-eu-central-1a.elasticloadbalancing.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "elasticloadbalancing.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z0142622O8JGID4PJ957"
              }
            ],
            "id": "vpce-01a03572a1d56b3b1",
            "network_interface_ids": [
              "eni-05e6e78dfc4e3bd5f",
              "eni-0ac81af82fff82ae5",
              "eni-0d9fa5e71fe508f6e"
            ],
            "owner_id": "218645542363",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01290dfb61ac469cc"
            ],
            "service_name": "com.amazonaws.eu-central-1.elasticloadbalancing",
            "state": "available",
            "subnet_ids": [
              "subnet-00515862c87909ccb",
              "subnet-019121122fb6fa9db",
              "subnet-033d339851acdc9f1"
            ],
            "tags": {
              "Endpoint": "true",
              "Project": "EKS",
              "created-by": "Terraform v1.0.1"
            },
            "tags_all": {
              "Endpoint": "true",
              "Project": "EKS",
              "created-by": "Terraform v1.0.1"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_security_group.default",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints_gateway.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "kms",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:vpc-endpoint/vpce-0709eb5048d8fb920",
            "dns_entry": [
              {
                "dns_name": "vpce-0709eb5048d8fb920-dka4dq8p.kms.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0709eb5048d8fb920-dka4dq8p-eu-central-1a.kms.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0709eb5048d8fb920-dka4dq8p-eu-central-1c.kms.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0709eb5048d8fb920-dka4dq8p-eu-central-1b.kms.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "kms.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z01418512D6CO39PP1JW8"
              }
            ],
            "id": "vpce-0709eb5048d8fb920",
            "network_interface_ids": [
              "eni-0259e33760cec7551",
              "eni-041ac2eefebe5f7c2",
              "eni-0e477e4aefa4949af"
            ],
            "owner_id": "218645542363",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01290dfb61ac469cc"
            ],
            "service_name": "com.amazonaws.eu-central-1.kms",
            "state": "available",
            "subnet_ids": [
              "subnet-00515862c87909ccb",
              "subnet-019121122fb6fa9db",
              "subnet-033d339851acdc9f1"
            ],
            "tags": {
              "Endpoint": "true",
              "Project": "EKS",
              "created-by": "Terraform v1.0.1"
            },
            "tags_all": {
              "Endpoint": "true",
              "Project": "EKS",
              "created-by": "Terraform v1.0.1"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_security_group.default",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints_gateway.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:vpc-endpoint/vpce-04849eff469c4fde3",
            "dns_entry": [
              {
                "dns_name": "vpce-04849eff469c4fde3-0rdmkrzr.logs.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-04849eff469c4fde3-0rdmkrzr-eu-central-1a.logs.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-04849eff469c4fde3-0rdmkrzr-eu-central-1b.logs.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-04849eff469c4fde3-0rdmkrzr-eu-central-1c.logs.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "logs.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z0983928CI8IUQ50SFS"
              }
            ],
            "id": "vpce-04849eff469c4fde3",
            "network_interface_ids": [
              "eni-035cc397a27a801ee",
              "eni-041ac8e8fe1b14a66",
              "eni-0dc444cf7884aa523"
            ],
            "owner_id": "218645542363",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01290dfb61ac469cc"
            ],
            "service_name": "com.amazonaws.eu-central-1.logs",
            "state": "available",
            "subnet_ids": [
              "subnet-00515862c87909ccb",
              "subnet-019121122fb6fa9db",
              "subnet-033d339851acdc9f1"
            ],
            "tags": {
              "Endpoint": "true",
              "Project": "EKS",
              "created-by": "Terraform v1.0.1"
            },
            "tags_all": {
              "Endpoint": "true",
              "Project": "EKS",
              "created-by": "Terraform v1.0.1"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_security_group.default",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints_gateway.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:vpc-endpoint/vpce-0d6889495fb36eda2",
            "dns_entry": [
              {
                "dns_name": "vpce-0d6889495fb36eda2-onsy5sud.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0d6889495fb36eda2-onsy5sud-eu-central-1a.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0d6889495fb36eda2-onsy5sud-eu-central-1c.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0d6889495fb36eda2-onsy5sud-eu-central-1b.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ssm.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z01954023RZHDUJSBQAC8"
              }
            ],
            "id": "vpce-0d6889495fb36eda2",
            "network_interface_ids": [
              "eni-097f9b8ca883cee35",
              "eni-09d8d29babfa8e9e8",
              "eni-0b52efc36faca33df"
            ],
            "owner_id": "218645542363",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01290dfb61ac469cc"
            ],
            "service_name": "com.amazonaws.eu-central-1.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-00515862c87909ccb",
              "subnet-019121122fb6fa9db",
              "subnet-033d339851acdc9f1"
            ],
            "tags": {
              "Endpoint": "true",
              "Project": "EKS",
              "created-by": "Terraform v1.0.1"
            },
            "tags_all": {
              "Endpoint": "true",
              "Project": "EKS",
              "created-by": "Terraform v1.0.1"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_security_group.default",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints_gateway.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "sts",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:218645542363:vpc-endpoint/vpce-0769b3d11745de0ea",
            "dns_entry": [
              {
                "dns_name": "vpce-0769b3d11745de0ea-bs1rp5vn.sts.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0769b3d11745de0ea-bs1rp5vn-eu-central-1a.sts.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0769b3d11745de0ea-bs1rp5vn-eu-central-1c.sts.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0769b3d11745de0ea-bs1rp5vn-eu-central-1b.sts.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "sts.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z09849612NUPDGCXKBRZT"
              }
            ],
            "id": "vpce-0769b3d11745de0ea",
            "network_interface_ids": [
              "eni-03064b27235447312",
              "eni-05c2d57d2e6d4f086",
              "eni-0fa110cbf45c75a85"
            ],
            "owner_id": "218645542363",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01290dfb61ac469cc"
            ],
            "service_name": "com.amazonaws.eu-central-1.sts",
            "state": "available",
            "subnet_ids": [
              "subnet-00515862c87909ccb",
              "subnet-019121122fb6fa9db",
              "subnet-033d339851acdc9f1"
            ],
            "tags": {
              "Endpoint": "true",
              "Project": "EKS",
              "created-by": "Terraform v1.0.1"
            },
            "tags_all": {
              "Endpoint": "true",
              "Project": "EKS",
              "created-by": "Terraform v1.0.1"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-034c92cd703eec780"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_security_group.default",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints_gateway.data.aws_vpc_endpoint_service.this"
          ]
        }
      ]
    }
  ]
}